--- a/FSvBSCustomCloneUtility/UserControls/CustomMorphControl.xaml
+++ b/FSvBSCustomCloneUtility/UserControls/CustomMorphControl.xaml
@@ -1,9 +1,9 @@
-﻿<GroupBox x:Class="FSvBSCustomCloneUtility.Content.CustomMorphPage"
+﻿<UserControl x:Class="FSvBSCustomCloneUtility.UserControls.CustomMorphControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Content"
+      xmlns:local="clr-namespace:FSvBSCustomCloneUtility.UserControls"
       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
       xmlns:fa5="http://schemas.fontawesome.com/icons/"
       mc:Ignorable="d" 
@@ -40,7 +40,7 @@
                 1. Select the BioD_FSvBS.pcc file located in the DLC folder.
         </TextBlock>
         <TextBox x:Name="FSvBSTextBox" Text=""  ToolTip="BioD_FSvBS_Dummies.pcc file." Grid.Row="2" Grid.Column="0"/>
-        <Button x:Name="FSvBSBrowseButton" Content="Browse" Command="" Grid.Row="2" Grid.Column="1"/>
+        <Button x:Name="FSvBSBrowseButton" Content="Browse" Command="{Binding SelectTargetCommand}" Grid.Row="2" Grid.Column="1"/>
         <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="2" Grid.Column="2"/>
 
         <!-- Male headmorph -->
@@ -76,4 +76,4 @@
                 ME3
         </TextBlock>
     </Grid>
-</GroupBox>
+</UserControl>
