Refactor code to implement a MVVM architecture with Caliburn.Micro

--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="FSvBSCustomCloneUtility.UserControls.CustomMorphControl"
+﻿<UserControl x:Class="FSvBSCustomCloneUtility.Views.CustomMorphView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FSvBSCustomCloneUtility.UserControls"
+      xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Views"
       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
       xmlns:fa5="http://schemas.fontawesome.com/icons/"
       mc:Ignorable="d" 
