--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Views"
       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
       xmlns:fa5="http://schemas.fontawesome.com/icons/"
+      xmlns:cal="http://www.caliburnproject.org"
       mc:Ignorable="d" 
       BorderThickness="0"
       d:DesignHeight="450" d:DesignWidth="800">
@@ -40,7 +41,7 @@
                 1. Select the BioD_FSvBS.pcc file located in the DLC folder.
         </TextBlock>
         <TextBox x:Name="FSvBSTextBox" Text=""  ToolTip="BioD_FSvBS_Dummies.pcc file." Grid.Row="2" Grid.Column="0"/>
-        <Button x:Name="FSvBSBrowseButton" Content="Browse" Command="{Binding SelectTargetCommand}" Grid.Row="2" Grid.Column="1"/>
+        <Button x:Name="SelectTarget"  Grid.Row="2" Grid.Column="1">Browse</Button>
         <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="2" Grid.Column="2"/>
 
         <!-- Male headmorph -->
