--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -16,7 +16,6 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10*" />
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -37,14 +36,18 @@
         </TextBlock>
 
         <!-- FSvBS file -->
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="3">
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Margin="0, 0, 0, 10">
             <TextBlock>
                 1. Select the BioD_FSvBS.pcc file located in the DLC folder.
             </TextBlock>
-            <StackPanel Margin="0, 10" Orientation="Horizontal">
-                <TextBox Text="{Binding FSvBSFile, Mode=OneWay}" ToolTip="BioD_FSvBS_Dummies.pcc file." IsReadOnly="True" Width="500" Height="20"/>
-                <Button x:Name="FSvBSFileButton">Browse</Button>
-            </StackPanel>
+            <Grid Margin="0, 10, 0, 5" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding FSvBSFile, Mode=OneWay}" ToolTip="BioD_FSvBS_Dummies.pcc file." IsReadOnly="True" Margin="0,0,10,0" Grid.Column="0"/>
+                <Button x:Name="FSvBSFileButton" HorizontalAlignment="Right" Width="100" Grid.Column="1" >Browse</Button>
+            </Grid>
             <TextBlock x:Name="WarningFSvBSFile" Foreground="Red"/>
         </StackPanel>
 
@@ -54,7 +57,6 @@
         </TextBlock>
         <TextBox Text="{Binding RonMFile, Mode=OneWay}"  ToolTip="Male .ron file." IsReadOnly="True" Grid.Row="4" Grid.Column="0"/>
         <Button x:Name="RonMFileButton"  Content="Browse" Command="" Grid.Row="4" Grid.Column="1"/>
-        <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="4" Grid.Column="2"/>
 
         <!-- Female headmorph -->
         <TextBlock Grid.Row="5" Grid.ColumnSpan="3">
@@ -62,7 +64,6 @@
         </TextBlock>
         <TextBox Text="{Binding RonFFile, Mode=OneWay}"  ToolTip="Female .ron file." Grid.Row="6" Grid.Column="0"/>
         <Button x:Name="RonFFileButton" Content="Browse" Command="" Grid.Row="6" Grid.Column="1"/>
-        <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="6" Grid.Column="2"/>
 
         <!-- Resources -->
         <TextBlock Grid.Row="7" Grid.ColumnSpan="3">
@@ -70,7 +71,7 @@
         </TextBlock>
         <TextBox x:Name="ResourcesText" Text=""  ToolTip="BioD_FSvBS_Dummies.pcc file." Grid.Row="8" Grid.Column="0"/>
         <Button x:Name="ResourcesBrowse" Content="Browse" Command="" Grid.Row="8" Grid.Column="1"/>
-        <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="8" Grid.Column="2"/>
+        <!-- <fa5:ImageAwesome Icon="Solid_CheckCircle" Foreground="#FFFFFF" Grid.Row="8" Grid.Column="2"/> -->
 
         <!-- Apply -->
         <TextBlock Grid.Row="9" Grid.ColumnSpan="3">
