--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -35,7 +35,6 @@
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="400"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions>
@@ -43,14 +42,7 @@
                 <ImageBrush ImageSource="../images/main_banner.png" Stretch="UniformToFill"/>
             </Grid.Background>
 
-            <Image Grid.Column="1" Source="../images/logo.png" Margin="{adonisUi:Space}"/>
-            <StackPanel Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Label Margin="0,0,0,10" FontSize="15" Content="Target Game" HorizontalAlignment="Center"/>
-                <StackPanel Orientation="Horizontal">
-                    <RadioButton Name="ME3Checked" FontSize="15" Margin="10, 0" GroupName="MEGame" Content="ME3" />
-                    <RadioButton Name="LE3Checked" FontSize="15" Margin="10, 0" GroupName="MEGame" Content="LE3" />
-                </StackPanel>
-            </StackPanel>
+            <Image Grid.Column="1" Source="../images/logo.png" Width="400" Margin="{adonisUi:Space}"/>
         </Grid>
 
         <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Margin="0,20,0,0">
@@ -69,8 +61,13 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="FSvBSFileButtonA" HorizontalAlignment="Center" Width="200" Grid.Column="0" >ME3</Button>
-                <Button x:Name="FSvBSFileButton" HorizontalAlignment="Center" Width="200" Grid.Column="2" >LE3</Button>
+                <Button x:Name="ME3Clicked" HorizontalAlignment="Center" Width="200" Grid.Column="0"
+                        Background="{Binding ME3ButtonColor}"
+                        Content="ME3"/>
+                <Button x:Name="LE3Clicked" HorizontalAlignment="Center" Width="200" Grid.Column="2"
+                        Background="{Binding LE3ButtonColor}" 
+                        Content="LE3"
+                />
             </Grid>
         </StackPanel>
 
