--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -61,10 +61,10 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="ME3Clicked" HorizontalAlignment="Center" Width="200" Grid.Column="0"
+                <Button x:Name="TargetME3" HorizontalAlignment="Center" Width="200" Grid.Column="0"
                         Background="{Binding ME3ButtonColor}"
                         Content="ME3"/>
-                <Button x:Name="LE3Clicked" HorizontalAlignment="Center" Width="200" Grid.Column="2"
+                <Button x:Name="TargetLE3" HorizontalAlignment="Center" Width="200" Grid.Column="2"
                         Background="{Binding LE3ButtonColor}" 
                         Content="LE3"
                 />
