Add clear button for ron files. Improve code for handling of ron file updates. Fix bug in FSvBSDirectories.

--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -52,7 +52,7 @@
         <!-- FSvBS file -->
         <StackPanel Grid.Row="2" Grid.Column="1" Margin="{adonisUi:Space}">
             <TextBlock TextWrapping="Wrap">
-                1. Select the target game.
+                1. Select the target game. The FemShep v BroShep mod must be installed before using this tool.
             </TextBlock>
             <Grid Margin="0, 10, 0, 5" >
                 <Grid.ColumnDefinitions>
