--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -32,6 +32,7 @@
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
@@ -40,14 +41,15 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock VerticalAlignment="Center" Margin="12,0,10,0" Grid.Row="0" Grid.Column="0">Male</TextBlock>
-                <TextBox Text="{Binding RonMFile, Mode=OneWay}" ToolTip="Male .ron file." IsReadOnly="True"  Margin="0,0,10,0" Grid.Row="0" Grid.Column="1"/>
-                <Button x:Name="RonMFileButton" HorizontalAlignment="Right" Width="100" Grid.Row="0" Grid.Column="2">Browse</Button>
+                <TextBox Text="{Binding RonMFile, Mode=OneWay}" ToolTip="Male .ron file." IsReadOnly="True"  Grid.Row="0" Grid.Column="1"/>
+                <Button x:Name="RonMFileButton" Width="100" Margin="10,0" Grid.Row="0" Grid.Column="2">Browse</Button>
+                <Button x:Name="ClearMRon" Width="25" Grid.Row="0" Grid.Column="3">X</Button>
 
                 <TextBlock VerticalAlignment="Center" Margin="12,0,10,0" Grid.Row="2" Grid.Column="0">Female</TextBlock>
-                <TextBox Text="{Binding RonFFile, Mode=OneWay}" ToolTip="Female .ron file." IsReadOnly="True" Margin="0,0,10,0" Grid.Row="2" Grid.Column="1"/>
-                <Button x:Name="RonFFileButton" HorizontalAlignment="Right" Width="100" Grid.Row="2" Grid.Column="2" >Browse</Button>
+                <TextBox Text="{Binding RonFFile, Mode=OneWay}" ToolTip="Female .ron file." IsReadOnly="True" Grid.Row="2" Grid.Column="1"/>
+                <Button x:Name="RonFFileButton" Margin="10,0" Width="100" Grid.Row="2" Grid.Column="2" >Browse</Button>
+                <Button x:Name="ClearFRon" Width="25" Grid.Row="2" Grid.Column="3">X</Button>
             </Grid>
-            <TextBlock x:Name="WarningRonFiles" Foreground="Red"/>
         </StackPanel>
 
         <!-- Apply -->
