--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -8,8 +8,7 @@
       xmlns:fa5="http://schemas.fontawesome.com/icons/"
       xmlns:cal="http://www.caliburnproject.org"
       mc:Ignorable="d" 
-      BorderThickness="0"
-      d:DesignHeight="450" d:DesignWidth="800">
+      BorderThickness="0">
 
 
     <Grid Grid.Row="1" Margin="{adonisUi:Space}">
